<resources>
    <string name="app_name">Intel RE</string>
    <string name="save">Continue to store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_userid">Username</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_dail_entry_menu">Daily Entry</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid Username</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>


    <string name="menu_daily_route_plan">Daily Route Plan</string>
    <string name="menu_daily_download">Download Data</string>
    <string name="menu_upload_data">Upload Data</string>
    <string name="menu_geotag">Geo Tag</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_services">Services</string>
    <string name="NodataAvailable">No data available</string>
    <string name="Pleasedownaloaddata">Please download data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="export_database">Export Database</string>
    <string name="Areyou_sure_take_backup"> Are you sure you want to take the backup of your data</string>
    <string name="errordatabase_not_exporting">Error in Database Exporting</string>
    <string name="cancel">Cancel</string>
    <string name="main_menu_activity_name">INTEL Re.</string>

    <string name="data_uploaded_successfully">Database Uploaded Successfully</string>
    <string name="errordatabase_not_uploaded">Error in Database Uploading</string>
    <string name="database_not_uploaded">Database Not Uploaded</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="nonetwork"> No Network Connection. Please Check Your Internet Connection</string>
    <string name="previous_data_upload">Please Upload Previous Data First</string>
    <string name="want_download_data">Do you want to Download Data?</string>
    <string name="title_activity_rsp_list">RSP List</string>
    <string name="title_activity_rsp_detail">RSP Detail</string>

    //upendra_19dec

    <string name="rsp_name">RSP Name</string>
    <string name="email_id">Email ID</string>
    <string name="phone_no">Phone No</string>
    <string name="other_name">Owner Name</string>
    <string name="brand">Brand</string>
    <string name="registerd">IREP Registered</string>


    //jeevan for storelist
    <string name="title_store_list_activity_store_already_done">Store Already Uploaded</string>
    <string name="title_store_list_activity_store_data_uploaded">Store Data Uploaded</string>
    <string name="title_store_list_activity_store_already_checkout">Store Already Checkout</string>
    <string name="title_store_list_activity_store_again_uploaded">Please Upload data again</string>
    <string name="title_store_list_activity_store_closed">Store Closed</string>
    <string name="title_store_list_activity_already_store_closed">Store Already Closed</string>
    <string name="title_store_list_checkout_Already_filled">Data already filled</string>
    <string name="wantcheckout">Are you sure you want to Checkout ?</string>
    <string name="closed">Close</string>
    <string name="store_visited">Store Visited</string>
    <string name="dialog_title">Parinaam</string>
    <string name="first_geotag_the_store">First geotag the store</string>
    <string name="DELETE_ALERT_MESSAGE">Saved data will be lost - Do you want to continue?</string>
    <string name="storefront">Click Store Front Image</string>
    <string name="title_store_list_checkout_current">Please checkout from current store</string>
    <string name="alertsaveData"> Are you sure you want to save data ?</string>
    <string name="title_activity_training">Training </string>

    //upendra21dec
    <string name="rsp">RSP</string>
    <string name="training_type">Training Type</string>
    <string name="topic">Topic</string>
    <string name="camera">Camera</string>
    <string name="name">Name</string>
    <string name="TrainnigType">Type</string>
    <string name="RspList">Rsp</string>
    <string name="delete">Delete</string>
    <string name="title_activity_geo_tag_store_list">Geo Tag List</string>

    <string name="checkout">Continue to store checkout</string>
    <string name="no_data_for_upload">No Data For Upload</string>
    <string name="title_store_list_download_data">Please Download Data First</string>
    <string name="for_checkout">Please Checkout Current Store</string>
    <string name="want_upload_data">Do you want to Upload Data?</string>
    <string name="title_store_list_geo_tag">Please Store GeoTag First</string>


    //upendra 26 dec
    <string name="title_geo_tag_activity_geo_already_done">Store Already Geotagged</string>
    <string name="title_geo_tag_activity_geo_data">Store Geo Data Uploaded</string>
    <string name="title_geo_tag_activity_upload_data">Store Uploaded</string>
    <string name="title_activity_geo_tagging">GeoTaggingActivity</string>
    <string name="title_activity_store_geotag">Geo Tag</string>
    <string name="notsuppoted">This device is not supported.</string>
    <string name="takeimage">Please Take Image</string>
    <string name="gpsebale">Click ok to enable GPS.</string>
    <string name="gps">GPS IS DISABLED...</string>
    <string name="uploaddata">Uploading Data</string>
    <string name="title_activity_journey_plan_search">Journey Plan Search</string>
    <string name="store_search">Lookup Route Plan</string>
    <string name="performance">Performance</string>
    <string name="api_key"> AIzaSyCs2VZqLl4OgStAraUHr8012cUc7vf3Uo8</string>

    <string name="Rspspinnertext">-Select RSP-</string>

    ///for ipos
    <string name="ipos_noof_display">Numbers Of Display</string>
    <string name="ipos_noof_machine_on">Numbers Of Machine On</string>
    <string name="ipos">IPOS</string>
    <string name="costomized_ipos">Customized IPOS</string>
    <string name="gaming_ipos">Gaming IPOS</string>
    <string name="rxt_screens">RXT Screens</string>
    <string name="rxt">RXT</string>
    <string name="customized_rxt_screens">Customized RXT Screens</string>
    <string name="parinaam">Parinaam </string>
    <string name="Engagement">Engagement </string>
    <string name="alert_save">Are you sure you want to save data ?</string>

    <string name="qtrs_str">Qtrs</string>
    <string name="shoper_mkt_str">Shopper Mkt\n(Max:4)</string>
    <string name="training_advocacy">Training &amp; Advocacy\n(Max:3)</string>
    <string name="visual_merchandising_score_str">Visual Merchandising\n(Max:3)</string>
    <string name="brave_score_str">Brave Score\n(Max:10)</string>


</resources>
