<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/custom_margin"
    android:paddingTop="@dimen/custom_margin"
    android:paddingRight="@dimen/custom_margin"
    android:paddingBottom="@dimen/custom_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".reports.BraveindexScoreActivity"
    tools:showIn="@layout/activity_braveindex_score">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.2"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/size6dp"
                    android:text="@string/qtrs_str"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1.8"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/size6dp"
                    android:text="@string/shoper_mkt_str"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize13sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="2.5"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/size6dp"
                    android:text="@string/training_advocacy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="2.6"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/size6dp"
                    android:text="@string/visual_merchandising_score_str"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1.9"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/size6dp"
                    android:text="@string/brave_score_str"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize13sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/braveindex_recycl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
