<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/store_p_activity_vertical_margin"
    android:paddingTop="@dimen/store_p_activity_vertical_margin"
    android:paddingRight="@dimen/store_p_activity_vertical_margin"
    android:paddingBottom="@dimen/store_p_activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".dailyentry.TrainingActivity"
    tools:showIn="@layout/activity_training">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="4"
                            android:gravity="center_vertical"
                            android:padding="@dimen/custom_margin"
                            android:text="@string/training_type"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize14sp" />

                        <Spinner
                            android:id="@+id/sp_trainingtype"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="3dp"
                            android:layout_weight="6"
                            android:gravity="center"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize14sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="4"
                            android:gravity="center_vertical"
                            android:padding="@dimen/custom_margin"
                            android:text="@string/topic"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize14sp" />

                        <Spinner
                            android:id="@+id/sp_topic"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="3dp"
                            android:layout_weight="6"
                            android:gravity="center"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="4"
                            android:gravity="center_vertical"
                            android:padding="@dimen/custom_margin"
                            android:text="@string/rsp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textsize14sp" />


                        <intelre.cpm.com.intelre.multiselectionspin.MultiSpinnerSearch
                            android:id="@+id/sp_rsp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="3dp"
                            android:layout_weight="6"
                            android:gravity="center"
                            android:inputType="text"
                            android:spinnerMode="dialog"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:hintText="@string/Rspspinnertext" />

                        <Spinner
                            android:id="@+id/sp_rsp_"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="3dp"
                            android:layout_weight="6"
                            android:inputType="text"
                            android:spinnerMode="dialog"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/appbar_padding_top"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_photoMar"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/camera_orange" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="vertical">

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/btn_add"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|right"
                            android:layout_margin="@dimen/activity_vertical_margin"
                            android:src="@drawable/add" />
                        />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:id="@+id/rl_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/custom_margin"
                    android:text="@string/TrainnigType"
                    android:textColor="#fff"
                    android:textSize="@dimen/textsize14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3sp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/custom_margin"
                    android:paddingLeft="2dp"
                    android:text="@string/topic"
                    android:textColor="#fff"
                    android:textSize="@dimen/textsize14sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3sp"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/custom_margin"
                    android:paddingLeft="2dp"
                    android:text="@string/rsp"
                    android:textColor="#fff"
                    android:textSize="@dimen/textsize14sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3sp"
                    android:layout_weight="2.5"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/custom_margin"
                    android:paddingLeft="2dp"
                    android:text="Promotype"
                    android:textColor="#fff"
                    android:textSize="@dimen/textsize14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3sp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:text="@string/delete"
                    android:textColor="#fff"
                    android:padding="@dimen/custom_margin"
                    android:textSize="@dimen/textsize14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/marketinteligence_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
